Se adaptan endpoints para soportar HATEOAS y respuestas HAL-JSON Se crea la clase PropiedadesControllerV2 Se termina de arreglar el codigo